[package]
name = "dijkstra_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
nanorand = "0.7.0"
serde = { version = "1.0.152", features=["derive"] }
serde_json = "1.0.91"
smallvec = { version = "1.10.0", features=["serde"] }
